products refactor finished

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "bootstrap-vue": "^2.21.2"
+        "bootstrap-vue": "^2.21.2",
+        "vue-sweetalert2": "^4.3.1"
     }
 }
