feat: payment refactor (#42)
* feat: oc payment refactor

* fix: added files to gitignore

* fix to git ignore

* fix gitignore

* feat: oc-payment refactor finished

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+/resources/repositories/clients/AxiosClient.js
+/public/js/PO/pod.js
+/public/js/app.js
+/public/css/app.css
 .idea/
 /node_modules
 /public/hot
